# chimne-ssweep

./: README.md  bootstrap.sh  checkWithPaup.py  checkpoint_to_cmd.sh  configure.ac  masterPaup.nex
doc/: notes.tex
src/: chimne_ssweep_input.cpp  chimne_ssweep_input.hpp  chimne_ssweep_kernel.cpp  chimne_ssweep_kernel.hpp  chimne_ssweep_main.cpp  nexus_shell.cpp  nexus_shell.hpp  seq_likelihood.c  seq_likelihood.h
test/: P01.nex  P01.tre  cmd.nex  simple.nex  simple.tre
